--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,4 +20,5 @@
       <%= render "layouts/footer" %>
     </div>
   </body>
+  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 </html>
